# gmao-utils

./: .gitignore  LoadJedi.sh  README.md  config_gmao_utils.csh  config_gmao_utils.sh  config_gmao_utils.zsh  gmao-utils-notebook.ipynb  gpsro_spnasa_observations_inventory.db  jedi_modules  load_nceplibs_bufr.csh  load_nceplibs_bufr.sh  requirements.txt  run_gpsro_final.sh  setup.cfg  setup.py
auto/: run_gpsro_final.sh
config/: discover_config.yaml
extras/: LoadJedi.csh  load_nceplibs_bufr.csh
extras/sh_config/: config_gmao_utils.sh  load_jedi.sh
extras/zsh_config/: LoadJedi.zsh
src/base_utils/: GetInputFileListEnumerate.py  bufr_utils.py  convert_ioda2df.py  gpsro_utils_cli.py
src/base_utils/archive/: pyncepbufr_sinv_cli.py
src/base_utils/bufr_utils/: gmao_ncepbufr.py  nceplibs_cmd_sinv.py  nceplibs_sinv.py
src/bufr_utils/: nceplibs_cmd_sinv.py  nceplibs_sinv.py  sinv.py
src/bufr_utils/archive/: nceplibs_cmd_sinv.py
src/config_handlers/: bufr-code-table-C-sinv-merge.csv  discover_config.py
src/gpsro_utils/: ObsCountsPlotter.py  __init__.py  bufr_utils.py  config_nceplibs_cmds.py  convert_.py  convert_bufr2ioda.py  convert_ioda2df.py  discover_config.py  explore_ioda_netcdf.py  file_utils.py  gpsro_utils_cli.py  ioda_utils.py  plot_latitude_bins.py  plot_latitude_bins_kx.py
src/tests/: gpsro_tools_dependencies.py
