[metadata]
name = gpsro_utils
version = 0.0.0 
author = Seth Cohen
author_email = seth.i.cohen@nasa.gov
description = NASA/GMAO. Tools for working with data files in both BUFR and IODA (JEDI) format.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = gpsro, bufr, ioda, converters
home_page = https://github.com/cohen-seth/gmao-utils.git
license = GNU Lesser General Public License
classifiers =
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/cohen-seth/gmao-utils.git/issues
    CI = https://github.com/cohen-seth/gmao-utils.git/actions

[build-system]
requires = ["setuptools", "wheel"]
#...

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find:
python_requires = >= 3.6
setup_requires =
  setuptools
install_requires =
  attrs
  click
  netcdf4
  numpy
  pandas

[options.entry_points]
console_scripts =
  gpsro-utils = gpsro_utils:cli

[options.extras_require]
dev = flake8; autopep8; pylint; pytest; tox;

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md, *.yaml, *.png

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
